--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
     "ionic": "driftyco/ionic-bower#1.0.0-rc.1"
   },
   "dependencies": {
-    "lodash": "~3.5.0"
+    "lodash": "~3.5.0",
     "angularfire": "~1.0.0"
   }
 }
