--- a/bower.json
+++ b/bower.json
@@ -2,7 +2,8 @@
   "name": "iBUC",
   "private": "true",
   "devDependencies": {
-    "ionic": "driftyco/ionic-bower#1.0.0-rc.1"
+    "ionic": "driftyco/ionic-bower#1.0.0-rc.1",
+    "platform": "~1.3.0"
   },
   "dependencies": {
     "lodash": "~3.5.0",
