--- a/bower.json
+++ b/bower.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "lodash": "~3.5.0",
-    "angularfire": "~1.0.0"
+    "angularfire": "~1.0.0",
+    "ngCordova": "~0.1.12-alpha"
   }
 }
